--- a/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.html
+++ b/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.html
@@ -22,7 +22,8 @@
                 </div>
                 <div>
                     <p class="kundenDaten">
-                        Friedaustrasse 3
+                        Thomas Brändle
+                        <br /> Friedaustrasse 3
                         <br /> 9608 Ganterschwil
                         <br /> CH - Schweiz
                     </p>
@@ -170,143 +171,30 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
+                        <td><a (click)="openMeilenstein()">01</a></td>
+                        <td><a (click)="openMeilenstein()">Konzept</a></td>
+                        <td><a (click)="openMeilenstein()">01.03.2022</a></td>
+                        <td><a (click)="openMeilenstein()">Abgeschlossen</a></td>
                     </tr>
                     <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
+                        <td><a (click)="openMeilenstein()">01</a></td>
+                        <td><a (click)="openMeilenstein()">Konzept</a></td>
+                        <td><a (click)="openMeilenstein()">01.03.2022</a></td>
+                        <td><a (click)="openMeilenstein()">Abgeschlossen</a></td>
                     </tr>
                     <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
+                        <td><a (click)="openMeilenstein()">01</a></td>
+                        <td><a (click)="openMeilenstein()">Konzept</a></td>
+                        <td><a (click)="openMeilenstein()">01.03.2022</a></td>
+                        <td><a (click)="openMeilenstein()">Abgeschlossen</a></td>
                     </tr>
                     <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
+                        <td><a (click)="openMeilenstein()">01</a></td>
+                        <td><a (click)="openMeilenstein()">Konzept</a></td>
+                        <td><a (click)="openMeilenstein()">01.03.2022</a></td>
+                        <td><a (click)="openMeilenstein()">Abgeschlossen</a></td>
                     </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="/">01</a></td>
-                        <td><a routerLink="/">Konzept</a></td>
-                        <td><a routerLink="/">01.03.2022</a></td>
-                        <td><a routerLink="/">Abgeschlossen</a></td>
-                    </tr>
+
                 </tbody>
             </table>
         </div>
@@ -314,6 +202,9 @@
     <div class="fiveUnten window">
         <div class="windowTitle windowHeader">
             <p>Positionen</p>
+        </div>
+        <div class="btnErfassen positionen">
+            <button type="button" class="btnErfassen" (click)="openKalkulation()">Kalkulation</button>
         </div>
         <div class="positionTable">
             <table>
