--- a/src/app/_hauptKomponente/f-angebot/f-angebot.component.html
+++ b/src/app/_hauptKomponente/f-angebot/f-angebot.component.html
@@ -72,6 +72,9 @@
         <div class="windowTitle windowHeader">
             <p>Positionen</p>
         </div>
+        <div class="btnErfassen positionen">
+            <button type="button" class="btnErfassen" (click)="openKalkulation()">Kalkulation</button>
+        </div>
         <div class="positionTable">
             <table>
                 <thead>
