--- a/src/app/_hauptKomponente/h-kunde/h-kunde.component.html
+++ b/src/app/_hauptKomponente/h-kunde/h-kunde.component.html
@@ -84,104 +84,166 @@
         <div class="split firstSplit">
             <div class="windowTable">
                 <table>
-                    <tr>
-                        <th>Angebotsnummer</th>
-                        <th>Status</th>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">AN 10-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">AN 10-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">AN 10-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">AN 10-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">AN 10-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
+                    <thead>
+                        <tr>
+                            <th>Angebotsnummer</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
+                            <td><a routerLink="/projekte/angebot">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
+                            <td><a routerLink="/projekte/angebot">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
+                            <td><a routerLink="/projekte/angebot">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
+                            <td><a routerLink="/projekte/angebot">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
+                            <td><a routerLink="/projekte/angebot">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
+                            <td><a routerLink="/projekte/angebot">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
+                            <td><a routerLink="/projekte/angebot">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/angebot">AN 10-001</a></td>
+                            <td><a routerLink="/projekte/angebot">Offen</a></td>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
         </div>
         <div class="split secondSplit">
             <div class="windowTable">
                 <table>
-                    <tr>
-                        <th>Auftragsnummer</th>
-                        <th>Status</th>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">AB 20-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">AB 20-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">AB 20-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">AB 20-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">AB 20-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">AB 20-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-
+                    <thead>
+                        <tr>
+                            <th>Auftragsnummer</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">AB 20-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
         </div>
         <div class="split thirdSplit">
             <div class="windowTable">
                 <table>
-                    <tr>
-                        <th>Rechnungsnummer</th>
-                        <th>Status</th>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">RE 60-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">RE 60-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">RE 60-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">RE 60-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">RE 60-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">RE 60-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-                    <tr>
-                        <td><a routerLink="">RE 60-001</a></td>
-                        <td><a routerLink="">Offen</a></td>
-                    </tr>
-
+                    <thead>
+                        <tr>
+                            <th>Rechnungsnummer</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">RE 60-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">RE 60-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">RE 60-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                        <tr>
+                            <td><a routerLink="/projekte/auftrag">RE 60-001</a></td>
+                            <td><a routerLink="/projekte/auftrag">Offen</a></td>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
         </div>
