--- a/src/app/_popupKomponente/ansprechpartner/ansprechpartner.component.sass
+++ b/src/app/_popupKomponente/ansprechpartner/ansprechpartner.component.sass
@@ -46,7 +46,7 @@
         display: block
         overflow-y: auto
         height: auto
-        max-height: calc( 510px - 185px )
+        max-height: 318px
         margin-bottom: 10px
 
 .popupTableFirst td, 
