--- a/src/app/_popupKomponente/gruppen/gruppen.component.html
+++ b/src/app/_popupKomponente/gruppen/gruppen.component.html
@@ -9,10 +9,57 @@
     </div>
     <div class="popupContent">
         <div class="split firstSplit">
-        </div>
-        <div class="split secondSplit">
-        </div>
-        <div class="split thirdSplit">
+            <p>Gruppe/Kategorie:</p>
+            <div class="arbeitspakete">
+                <div class="list">
+                    <input type="text" value="Option">
+                    <input type="text" value="Wert">
+                </div>
+                <div class="list">
+                    <input type="text" value="Option">
+                    <input type="text" value="Wert">
+                </div>
+                <div class="list">
+                    <input type="text" value="Option">
+                    <input type="text" value="Wert">
+                </div>
+                <div class="list">
+                    <input type="text" value="Option">
+                    <input type="text" value="Wert">
+                </div>
+                <div class="list">
+                    <input type="text" value="Option">
+                    <input type="text" value="Wert">
+                </div>
+                <div class="list">
+                    <input type="text" value="Option">
+                    <input type="text" value="Wert">
+                </div>
+                <div class="list">
+                    <input type="text" value="Option">
+                    <input type="text" value="Wert">
+                </div>
+                <div class="list">
+                    <input type="text" value="Option">
+                    <input type="text" value="Wert">
+                </div>
+                <div class="list">
+                    <input type="text" value="Option">
+                    <input type="text" value="Wert">
+                </div>
+                <div class="list">
+                    <input type="text" value="Option">
+                    <input type="text" value="Wert">
+                </div>
+                <div class="list">
+                    <input type="text" value="Option">
+                    <input type="text" value="Wert">
+                </div>
+
+            </div>
+            <div class="btnBearbeiten btnMeilensteinHinzufuegen">
+                <p>+</p>
+            </div>
         </div>
     </div>
     <div class="popupFooter">
