--- a/src/app/_popupKomponente/gruppen/gruppen.component.sass
+++ b/src/app/_popupKomponente/gruppen/gruppen.component.sass
@@ -1,2 +1,26 @@
 @import './src/sass/var'
 @import './src/sass/popup'
+
+.arbeitspakete
+    max-height: 320px
+    overflow: scroll
+    width: 100%
+
+.arbeitspakete input
+    width: 45%
+
+.list input:nth-child(1)
+    margin-right: 10px
+
+.btnMeilensteinHinzufuegen
+    width: 98%
+
+.btnMeilenstein
+    height: 25px
+    width: 25px
+    border: 1px solid $borderColor
+    border-radius: 8px
+    cursor: pointer
+    background-color: white
+    display: inline-block
+
