--- a/src/app/_popupKomponente/jahresabschluss/jahresabschluss.component.html
+++ b/src/app/_popupKomponente/jahresabschluss/jahresabschluss.component.html
@@ -8,11 +8,146 @@
         </div>
     </div>
     <div class="popupContent">
-        <div class="split firstSplit">
-        </div>
-        <div class="split secondSplit">
-        </div>
-        <div class="split thirdSplit">
+        <div class="split fullWindow">
+            <div class="windowTable popupTable popupTableFull">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Geschäftsjahr</th>
+                            <th>Dokument</th>
+                            <th>Download</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>2021/2022</td>
+                            <td>Jahresabschluss</td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
     <div class="popupFooter">
