--- a/src/app/_popupKomponente/logo/logo.component.sass
+++ b/src/app/_popupKomponente/logo/logo.component.sass
@@ -1,2 +1,16 @@
 @import './src/sass/var'
 @import './src/sass/popup'
+
+.logoImg
+    border: 1px solid $borderColor
+    border-radius: 5px
+    display: flex
+    justify-content: center
+    align-items: center
+    margin-bottom: 15px
+
+.logoImg img
+    object-fit: contain
+    height: 250px
+    width: 250px
+    scale: 0.7
