--- a/src/app/_popupKomponente/statistiken/statistiken.component.html
+++ b/src/app/_popupKomponente/statistiken/statistiken.component.html
@@ -8,16 +8,116 @@
         </div>
     </div>
     <div class="popupContent">
-        <div class="split firstSplit">
-        </div>
-        <div class="split secondSplit">
-        </div>
-        <div class="split thirdSplit">
+        <div class="metaContent">
+            <div class="metaList">
+                <p>Geschäftsjahr</p>
+                <p>2022/2021</p>
+            </div>
+            <div class="metaList">
+                <p>Anzahl Aufträge</p>
+                <p>26</p>
+            </div>
+            <div class="metaList">
+                <p>Anzahl Angebote</p>
+                <p>47</p>
+            </div>
+            <div class="metaList">
+                <p>Erhaltene Angebote</p>
+                <p>25</p>
+            </div>
+            <div class="metaList">
+                <p>Gesamtumsatz</p>
+                <p>24'521.00.-</p>
+            </div>
+            <div class="metaList">
+                <p>Gewinn:</p>
+                <p>6'153.00.-
+                </p>
+            </div>
+            <div class="statistikJahr"></div>
+            <div class="metaList">
+                <p>Geschäftsjahr</p>
+                <p>2022/2021</p>
+            </div>
+            <div class="metaList">
+                <p>Anzahl Aufträge</p>
+                <p>26</p>
+            </div>
+            <div class="metaList">
+                <p>Anzahl Angebote</p>
+                <p>47</p>
+            </div>
+            <div class="metaList">
+                <p>Erhaltene Angebote</p>
+                <p>25</p>
+            </div>
+            <div class="metaList">
+                <p>Gesamtumsatz</p>
+                <p>24'521.00.-</p>
+            </div>
+            <div class="metaList">
+                <p>Gewinn:</p>
+                <p>6'153.00.-
+                </p>
+            </div>
+            <div class="statistikJahr"></div>
+            <div class="metaList">
+                <p>Geschäftsjahr</p>
+                <p>2022/2021</p>
+            </div>
+            <div class="metaList">
+                <p>Anzahl Aufträge</p>
+                <p>26</p>
+            </div>
+            <div class="metaList">
+                <p>Anzahl Angebote</p>
+                <p>47</p>
+            </div>
+            <div class="metaList">
+                <p>Erhaltene Angebote</p>
+                <p>25</p>
+            </div>
+            <div class="metaList">
+                <p>Gesamtumsatz</p>
+                <p>24'521.00.-</p>
+            </div>
+            <div class="metaList">
+                <p>Gewinn:</p>
+                <p>6'153.00.-
+                </p>
+            </div>
+            <div class="statistikJahr"></div>
+            <div class="metaList">
+                <p>Geschäftsjahr</p>
+                <p>2022/2021</p>
+            </div>
+            <div class="metaList">
+                <p>Anzahl Aufträge</p>
+                <p>26</p>
+            </div>
+            <div class="metaList">
+                <p>Anzahl Angebote</p>
+                <p>47</p>
+            </div>
+            <div class="metaList">
+                <p>Erhaltene Angebote</p>
+                <p>25</p>
+            </div>
+            <div class="metaList">
+                <p>Gesamtumsatz</p>
+                <p>24'521.00.-</p>
+            </div>
+            <div class="metaList">
+                <p>Gewinn:</p>
+                <p>6'153.00.-
+                </p>
+            </div>
+            <div class="statistikJahr"></div>
         </div>
     </div>
     <div class="popupFooter">
         <div class="btnBearbeiten btnSpeichern">
-            <p>Schliessen</p>
+            <p>Exportieren</p>
         </div>
     </div>
 </div>
