--- a/src/app/_popupKomponente/stunden/stunden.component.html
+++ b/src/app/_popupKomponente/stunden/stunden.component.html
@@ -16,20 +16,179 @@
                 <p class="inputTime">h:</p>
                 <p class="inputTime">min:</p>
             </div>
-            <div class="stunden splitStunden">
-                <input class="inputDate" type="date">
-                <select class="inputSelect" name="meilenstein" id="meilenstein">
-                    <option value="Meilenstein">Meilenstein</option>
-                    <option value="Meilenstein">Meilenstein</option>
-                    <option value="Meilenstein">Meilenstein</option>
-                    <option value="Meilenstein">Meilenstein</option>
-                </select>
-                <input class="inputText" type="text" value="Arbeitspaket/Leistung">
-                <input class="inputTime" type="text" value="5h">
-                <input class="inputTime" type="text" value="40min">
+            <div class="stundenContent">
+                <div class="stunden splitStunden">
+                    <input class="inputDate" type="date">
+                    <select class="inputSelect" name="meilenstein" id="meilenstein">
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                    </select>
+                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
+                    <input class="inputTime" type="text" value="5h">
+                    <input class="inputTime" type="text" value="40min">
+                </div>
+                <div class="stunden splitStunden">
+                    <input class="inputDate" type="date">
+                    <select class="inputSelect" name="meilenstein" id="meilenstein">
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                    </select>
+                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
+                    <input class="inputTime" type="text" value="5h">
+                    <input class="inputTime" type="text" value="40min">
+                </div>
+                <div class="stunden splitStunden">
+                    <input class="inputDate" type="date">
+                    <select class="inputSelect" name="meilenstein" id="meilenstein">
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                    </select>
+                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
+                    <input class="inputTime" type="text" value="5h">
+                    <input class="inputTime" type="text" value="40min">
+                </div>
+                <div class="stunden splitStunden">
+                    <input class="inputDate" type="date">
+                    <select class="inputSelect" name="meilenstein" id="meilenstein">
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                    </select>
+                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
+                    <input class="inputTime" type="text" value="5h">
+                    <input class="inputTime" type="text" value="40min">
+                </div>
+                <div class="stunden splitStunden">
+                    <input class="inputDate" type="date">
+                    <select class="inputSelect" name="meilenstein" id="meilenstein">
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                    </select>
+                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
+                    <input class="inputTime" type="text" value="5h">
+                    <input class="inputTime" type="text" value="40min">
+                </div>
+                <div class="stunden splitStunden">
+                    <input class="inputDate" type="date">
+                    <select class="inputSelect" name="meilenstein" id="meilenstein">
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                    </select>
+                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
+                    <input class="inputTime" type="text" value="5h">
+                    <input class="inputTime" type="text" value="40min">
+                </div>
+                <div class="stunden splitStunden">
+                    <input class="inputDate" type="date">
+                    <select class="inputSelect" name="meilenstein" id="meilenstein">
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                    </select>
+                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
+                    <input class="inputTime" type="text" value="5h">
+                    <input class="inputTime" type="text" value="40min">
+                </div>
+                <div class="stunden splitStunden">
+                    <input class="inputDate" type="date">
+                    <select class="inputSelect" name="meilenstein" id="meilenstein">
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                    </select>
+                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
+                    <input class="inputTime" type="text" value="5h">
+                    <input class="inputTime" type="text" value="40min">
+                </div>
+                <div class="stunden splitStunden">
+                    <input class="inputDate" type="date">
+                    <select class="inputSelect" name="meilenstein" id="meilenstein">
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                    </select>
+                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
+                    <input class="inputTime" type="text" value="5h">
+                    <input class="inputTime" type="text" value="40min">
+                </div>
+                <div class="stunden splitStunden">
+                    <input class="inputDate" type="date">
+                    <select class="inputSelect" name="meilenstein" id="meilenstein">
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                    </select>
+                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
+                    <input class="inputTime" type="text" value="5h">
+                    <input class="inputTime" type="text" value="40min">
+                </div>
+                <div class="stunden splitStunden">
+                    <input class="inputDate" type="date">
+                    <select class="inputSelect" name="meilenstein" id="meilenstein">
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                    </select>
+                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
+                    <input class="inputTime" type="text" value="5h">
+                    <input class="inputTime" type="text" value="40min">
+                </div>
+                <div class="stunden splitStunden">
+                    <input class="inputDate" type="date">
+                    <select class="inputSelect" name="meilenstein" id="meilenstein">
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                    </select>
+                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
+                    <input class="inputTime" type="text" value="5h">
+                    <input class="inputTime" type="text" value="40min">
+                </div>
+                <div class="stunden splitStunden">
+                    <input class="inputDate" type="date">
+                    <select class="inputSelect" name="meilenstein" id="meilenstein">
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                    </select>
+                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
+                    <input class="inputTime" type="text" value="5h">
+                    <input class="inputTime" type="text" value="40min">
+                </div>
+                <div class="stunden splitStunden">
+                    <input class="inputDate" type="date">
+                    <select class="inputSelect" name="meilenstein" id="meilenstein">
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                        <option value="Meilenstein">Meilenstein</option>
+                    </select>
+                    <input class="inputText" type="text" value="Arbeitspaket/Leistung">
+                    <input class="inputTime" type="text" value="5h">
+                    <input class="inputTime" type="text" value="40min">
+                </div>
+
             </div>
             <div class="stundenHinzufuegen splitStunden">
-                <div class="btnBearbeiten">
+                <div class="btnBearbeiten btnHinzufuegen">
                     <p>+</p>
                 </div>
             </div>
