--- a/src/sass/_element.sass
+++ b/src/sass/_element.sass
@@ -234,7 +234,7 @@
     margin-bottom: 5px
 
 .btnBearbeiten
-    height: 34px 
+    height: 30px 
 
 .btnBearbeiten p
     width: 100%
@@ -242,12 +242,13 @@
     border: 1px solid $borderColor
     border-radius: 5px
     text-align: center
-    padding: 2px
+    padding-top: 5px
+    padding-bottom: 5px
     margin-bottom: 5px
     cursor: pointer
 
 .notizen textarea
-    height: 166px
+    height: 180px
     width: 98%
     border: 1px solid transparent
     border-radius: 5px
@@ -269,7 +270,7 @@ select
     border-radius: 5px
     cursor: pointer
     outline: none
-    margin-bottom: 10px
+    margin-bottom: 5px
     font-size: 15px
     font-family: $fontRoboto
     
@@ -287,4 +288,5 @@ select
     border-radius: 5px
     padding-top: 5px
     padding-bottom: 5px
+    margin-bottom: 5px
     cursor: pointer
