--- a/src/app/_popupKomponente/einstellungen/einstellungen.component.html
+++ b/src/app/_popupKomponente/einstellungen/einstellungen.component.html
@@ -9,10 +9,51 @@
     </div>
     <div class="popupContent">
         <div class="split firstSplit">
+            <p>Name:</p>
+            <input type="text" value="Thomas Brändle">
+            <p>Adresse:</p>
+            <input type="text" value="Friedaustrasse 3">
+            <p>Ortschaft:</p>
+            <input type="text" value="9608 Ganterschwil">
+            <p>Land:</p>
+            <input type="text" value="CH - Schweiz">
+            <p>Rechtsform:</p>
+            <input type="text" value="Einzelfirma">
+            <p>UID:</p>
+            <input type="text" value="Keine">
         </div>
         <div class="split secondSplit">
+            <p>Website:</p>
+            <input type="text" value="www.thomas-braendle.com">
+            <p>E-Mail:</p>
+            <input type="text" value="design@thomas-braendle.com">
+            <p>Telefon:</p>
+            <input type="text" value="+41 79 520 65 11">
+            <p>Start Geschäftsjahr:</p>
+            <input type="date">
+            <p>Mehrwertsteuer:</p>
+            <input type="text" value="0">
+            <p>Abteilungen:</p>
+            <select name="abteilungen" id="abteilungen">
+                <option value="ab_01">Entwicklung</option>
+                <option value="ab_02">Geschäftsleitung</option>
+                <option value="ab_03">Sekretariat</option>
+                <option value="ab_04">Lernende</option>
+                <option value="ab_04">Anderes</option>
+            </select>
+            <div class="btnBearbeiten">
+                <p (click)="openGruppen()">Abteilungen bearbeiten</p>
+            </div>
         </div>
         <div class="split thirdSplit">
+            <p>Notizen:</p>
+            <div class="notizen notizenHoch">
+                <textarea readonly="readonly">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimatasanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justoduo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                </textarea>
+            </div>
+            <div class="btnBearbeiten btnNotizen">
+                <p (click)="openNotizen()">Notizen bearbeiten</p>
+            </div>
         </div>
     </div>
     <div class="popupFooter">
