--- a/src/app/_popupKomponente/generate-mitarbeiter/generate-mitarbeiter.component.html
+++ b/src/app/_popupKomponente/generate-mitarbeiter/generate-mitarbeiter.component.html
@@ -9,10 +9,49 @@
     </div>
     <div class="popupContent">
         <div class="split firstSplit">
+            <p>Mitarbeiternummer:</p>
+            <input type="text" readonly class="contentReadonly" value="MA 101-001">
+            <p>Vorname:</p>
+            <input type="text" value="Thomas">
+            <p>Nachname:</p>
+            <input type="text" value="Brändle">
+            <p>Adresse:</p>
+            <input type="text" value="Friedaustrasse 3">
+            <p>Ortschaft:</p>
+            <input type="text" value="9608 Ganterschwil">
+            <p>Land:</p>
+            <input type="text" value="CH - Schweiz">
         </div>
         <div class="split secondSplit">
+            <p>E-Mail:</p>
+            <input type="text" value="thomasbraendle94@gmail.com">
+            <p>Telefon:</p>
+            <input type="text" value="+41 79 520 65 11">
+            <p>Abteilung:</p>
+            <select name="abteilung" id="abteilung">
+                <option value="ab_01">Geschäftsführung</option>
+                <option value="ab_02">Webentwicklung</option>
+                <option value="ab_03">Sekretariat</option>
+            </select>
+            <p>Funktion:</p>
+            <input type="text" value="Webentwickler">
+            <p>Stellenprozent:</p>
+            <input type="text" value="100%">
+            <p>Admin-Rechte</p>
+            <select name="boolean" id="boolean">
+                <option value="yes">Ja</option>
+                <option value="no">Nein</option>
+            </select>
         </div>
         <div class="split thirdSplit">
+            <p>Notizen:</p>
+            <div class="notizen notizenHoch">
+                <textarea readonly="readonly">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimatasanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justoduo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                </textarea>
+            </div>
+            <div class="btnBearbeiten btnNotizen">
+                <p (click)="openNotizen()">Notizen bearbeiten</p>
+            </div>
         </div>
     </div>
     <div class="popupFooter">
