--- a/src/app/_popupKomponente/stunden/stunden.component.sass
+++ b/src/app/_popupKomponente/stunden/stunden.component.sass
@@ -2,6 +2,7 @@
 @import './src/sass/popup'
 .popupContent
     margin-left: 40px
+    margin-bottom: 0px
 
 .popupContent div
     display: -webkit-inline-box
@@ -30,3 +31,15 @@
 .stundenHinzufuegen
     display: block
     width: 500px
+
+.btnHinzufuegen
+    width: 120px
+    margin-left: 5px
+    font-size: 25px
+    margin-top: 15px
+    p
+        padding-top: 4px
+
+.stundenContent
+    max-height: 335px
+    overflow-y: scroll
